k8s/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semantic-sensei
  labels:
    app.kubernetes.io/instance: semantic-sensei
    app.kubernetes.io/component: ingress
spec:
  rules:
    - host: semantic-sensei.localdomain
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
